修改 product DAO與Service